refactor: create variables to text names

--- a/app/src/main/res/layout/activity_parameter.xml
+++ b/app/src/main/res/layout/activity_parameter.xml
@@ -32,14 +32,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="Return and close"
+        android:text="@string/return_and_close"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/parameter_et" />
-
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
